logs/spats-shape-seq.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spats_shape_seq'...
Compiling './lib/python3.5/site-packages/spats_shape_seq/db.py'...
***   File "./lib/python3.5/site-packages/spats_shape_seq/db.py", line 90
    print "Using all_pairs..."
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spats_shape_seq/spats.py'...
***   File "./lib/python3.5/site-packages/spats_shape_seq/spats.py", line 311
    print "{} --> {}".format(pair.identifier, pair.site) #, pair.mask.chars)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spats_shape_seq/target.py'...
***   File "./lib/python3.5/site-packages/spats_shape_seq/target.py", line 36
    print "Warning: minimum_length {} is not much longer than index length {}".format(min_len, word_len)
                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spats_shape_seq/v102.py'...
***   File "./lib/python3.5/site-packages/spats_shape_seq/v102.py", line 18
    print "Parsed and indexed {} data records.".format(count)
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spats_shape_seq-1.9.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
